# autotools-project

./: .gitignore  README.md  autotools-project.cabal
src/: License.hs  Main.hs  PackageInfo.hs  Template.hs  Types.hs
