name:                autotools-project
version:             0.1.0.0
synopsis:            Interactively creating a skeleton for Autotools project
-- description:
license:             BSD3
license-file:        LICENSE
author:              Chan Beom Park
maintainer:          chanbeom.park@cern.ch
-- copyright:
category:            Development
build-type:          Simple
cabal-version:       >=1.10

executable autotools-project
  main-is:             Main.hs
  build-depends:       base >=4.6,
                       directory >=1.2,
                       filepath >=1.3,
                       process >=1.2,
                       time >=1.4,
                       transformers >=0.4
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -fwarn-incomplete-patterns